--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-adsense-account" content="ca-pub-4657754476630097">
     <link rel="icon" type="image/png" href="./assets/favicon.png" />
     <title>EazyNet – Tab Manager</title>
     <link href="./output.css" rel="stylesheet">
