Updated the colors and images

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     </section>
 
   <!-- Solution Section -->
-  <section id="solution" class="py-20 px-6 bg-slate-50 text-center bg-gradient-to-r from-blue-500 via-indigo-600 to-purple-700">
-    <h2 class="text-3xl text-white font-bold mb-4" data-aos="fade-up">EazyNet Makes Tab Chaos a Thing of the Past</h2>
-    <p class="text-lg text-gray-200 max-w-2xl mx-auto mb-10" data-aos="fade-up" data-aos-delay="200">Group. Search. Switch. All in one elegant interface.</p>
+  <section id="solution" class="text-center py-24 px-6 bg-gray-50 relative">
+    <h2 class="text-5xl font-bold mb-4" data-aos="fade-up">EazyNet Makes Tab Chaos a Thing of the Past</h2>
+    <p class="ext-lg text-gray-600 mb-8 max-w-2xl mx-auto" data-aos="fade-up" data-aos-delay="200">Group. Search. Switch. All in one elegant interface.</p>
 
     <div class="flex justify-center gap-8">
       <!-- Screenshot 1 -->
