added demo video

--- a/index.html
+++ b/index.html
@@ -164,6 +164,24 @@
     </div>
   </div>
 </section>
+<!-- Demo Video Section -->
+<section id="demo-video" class="py-24 px-6 bg-white text-center">
+  <h2 class="text-4xl font-bold mb-6 text-gray-900" data-aos="fade-up">Watch EazyNet in Action</h2>
+  <p class="text-lg text-gray-600 mb-10 max-w-2xl mx-auto" data-aos="fade-up" data-aos-delay="100">
+    See how EazyNet helps you declutter tabs, stay productive, and navigate chaos-free.
+  </p>
+
+  <div class="relative max-w-4xl mx-auto" style="padding-top: 56.25%;">
+    <iframe width="560" height="315" 
+      src="https://www.youtube.com/embed/fb9KS9Nzb54" 
+      title="EazyNet Demo Video" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen 
+      class="absolute top-0 left-0 w-full h-full"
+    ></iframe>
+  </div>
+</section>
+
 <!-- Benefits Section -->
 <section id="benefits" class="py-20 px-6 bg-white text-center">
   <h2 class="text-4xl font-bold mb-8 text-gray-900" data-aos="fade-up">Why Choose EazyNet?</h2>
