decreased height of video

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
     See how EazyNet helps you declutter tabs, stay productive, and navigate chaos-free.
   </p>
 
-  <div class="relative max-w-4xl mx-auto" style="padding-top: 56.25%;">
-    <iframe width="560" height="315" 
+  <div class="relative max-w-4xl mx-auto" style="padding-top: 30.25%;">
+    <iframe 
       src="https://www.youtube.com/embed/fb9KS9Nzb54" 
       title="EazyNet Demo Video" 
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
