--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <a href="#testimonials" class="text-gray-600 hover:text-primary transition duration-300">Testimonials</a>
       <a href="#contact" class="text-gray-600 hover:text-primary transition duration-300">Contact</a>
     </nav>
-    <a href="#download" class="hidden md:inline-block bg-blue-600 text-white px-5 py-2 rounded-xl font-semibold hover:shadow-md transition duration-300">
+    <a href="https://chromewebstore.google.com/detail/pijkgnboinjefkploaonlbpgbnfgobpc?utm_source=item-share-cb" target="_blank" 
+    rel="noopener noreferrer" class="hidden md:inline-block bg-blue-600 text-white px-5 py-2 rounded-xl font-semibold hover:shadow-md transition duration-300">
       Get EazyNet
     </a>
   </div>
@@ -47,7 +48,7 @@
     <img src="./assets/Logo.png" alt="EazyNet Logo" class="mx-auto h-16 mb-6" data-aos="zoom-in" />
     <h1 class="text-5xl font-bold text-white mb-4" data-aos="zoom-in">Control Your Tabs. Boost Your Focus.</h1>
     <p class="text-xl text-gray-200 mb-6">EazyNet declutters your digital life by organizing your tabs smartly — so you can work faster, stress less, and stay focused.</p>
-    <a href="#" class="px-6 py-3 bg-white text-black rounded-xl font-semibold shadow hover:bg-gray-100 transition-all">Add to Chrome</a>
+    <a href="https://chromewebstore.google.com/detail/pijkgnboinjefkploaonlbpgbnfgobpc?utm_source=item-share-cb" target="_blank" rel="noopener noreferrer" class="px-6 py-3 bg-white text-black rounded-xl font-semibold shadow hover:bg-gray-100 transition-all">Add to Chrome</a>
 
   </section>
      <!-- Problem Section -->
@@ -238,14 +239,15 @@
       <h3 class="text-xl font-semibold mb-4">Free</h3>
       <p class="text-gray-600 mb-4">Access basic features and enjoy EazyNet without any cost.</p>
       <p class="font-semibold text-lg">$0 / month</p>
-      <a href="#" class="mt-4 inline-block px-6 py-3 bg-blue-600 text-white px-5 py-2 rounded-xl font-semibold hover:shadow-md transition duration-300">Get Started</a>
+      <a href="https://chromewebstore.google.com/detail/pijkgnboinjefkploaonlbpgbnfgobpc?utm_source=item-share-cb" target="_blank" 
+      rel="noopener noreferrer" class="mt-4 inline-block px-6 py-3 bg-blue-600 text-white px-5 py-2 rounded-xl font-semibold hover:shadow-md transition duration-300">Get Started</a>
     </div>
 
     <div class="bg-gray-100 p-8 rounded-lg shadow-md w-full sm:w-1/2 lg:w-1/3" data-aos="fade-up" data-aos-delay="200">
-      <h3 class="text-xl font-semibold mb-4">Premium</h3>
+      <h3 class="text-xl font-semibold mb-4">Premium (Coming Soon)</h3>
       <p class="text-gray-600 mb-4">Unlock advanced features, additional customization, and more.</p>
       <p class="font-semibold text-lg">$4.99 / month</p>
-      <a href="#" class="mt-4 inline-block px-6 py-3 bg-blue-600 text-white px-5 py-2 rounded-xl font-semibold hover:shadow-md transition duration-300">Upgrade</a>
+      <a href="#pricing" class="mt-4 inline-block px-6 py-3 bg-blue-600 text-white px-5 py-2 rounded-xl font-semibold hover:shadow-md transition duration-300">Upgrade</a>
     </div>
   </div>
 </section>
@@ -256,7 +258,8 @@
     <section id="cta" class="py-20 px-6 bg-black text-white text-center bg-slate-50 text-center bg-gradient-to-r from-blue-500 via-indigo-600 to-purple-700">
       <h2 class="text-3xl font-bold mb-4">Install EazyNet in 2 Clicks</h2>
       <p class="text-lg text-gray-300 mb-8">Declutter your mind and browser in seconds.</p>
-      <a href="#" class="px-6 py-3 bg-white text-black rounded-xl font-semibold shadow hover:bg-gray-100 transition-all">Add to Chrome</a>
+      <a href="https://chromewebstore.google.com/detail/pijkgnboinjefkploaonlbpgbnfgobpc?utm_source=item-share-cb" target="_blank" 
+      rel="noopener noreferrer" class="px-6 py-3 bg-white text-black rounded-xl font-semibold shadow hover:bg-gray-100 transition-all">Add to Chrome</a>
     </section>
 <!-- Contact Section -->
 <section id="contact" class="bg-gray-50 py-20 px-6">
@@ -267,21 +270,21 @@
     </p>
   </div>
 
-  <form action="https://formspree.io/f/xpwpvddn" method="POST" class="max-w-3xl mx-auto grid grid-cols-1 gap-6 bg-white p-8 rounded-2xl shadow-lg" data-aos="fade-up" data-aos-delay="200">
+  <form action="https://formspree.io/f/movdzeoq" method="POST" class="max-w-3xl mx-auto grid grid-cols-1 gap-6 bg-white p-8 rounded-2xl shadow-lg" data-aos="fade-up" data-aos-delay="200">
     <div>
-      <label for="name" class="block text-left font-semibold text-gray-700 mb-1">Name</label>
+      <label for="name" class="block text-left font-semibold text-gray-700 mb-1">Name<span class="required-asterisk">*</span></label>
       <input type="text" id="name" name="name" required
         class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent" />
     </div>
   
     <div>
-      <label for="email" class="block text-left font-semibold text-gray-700 mb-1">Email</label>
+      <label for="email" class="block text-left font-semibold text-gray-700 mb-1">Email<span class="required-asterisk">*</span></label>
       <input type="email" id="email" name="email" required
         class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent" />
     </div>
   
     <div>
-      <label for="message" class="block text-left font-semibold text-gray-700 mb-1">Message</label>
+      <label for="message" class="block text-left font-semibold text-gray-700 mb-1">Message<span class="required-asterisk">*</span></label>
       <textarea id="message" name="message" rows="5" required
         class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent resize-none"></textarea>
     </div>
@@ -329,7 +332,7 @@
       <div class="flex flex-col">
         <h4 class="font-semibold text-lg text-gray-300 mb-4">Contact Info</h4>
         <ul class="space-y-2 text-sm text-gray-400">
-          <li><a href="javascript:void(0)" id="contact-us" class="hover:text-primary transition-colors">support@eazynet.com</a></li>
+          <li><a href="javascript:void(0)" id="contact-us" class="hover:text-primary transition-colors">eazynettabmanager@gmail.com</a></li>
           <!-- <li><a href="tel:+1234567890" class="hover:text-primary transition-colors">+1 234 567 890</a></li>
           <li><a href="https://www.google.com/maps" class="hover:text-primary transition-colors">22, Linking Road, NY</a></li> -->
         </ul>
@@ -339,10 +342,12 @@
       <div class="flex flex-col">
         <h4 class="font-semibold text-lg text-gray-300 mb-4">Follow Us</h4>
         <div class="flex space-x-4">
-          <a href="https://twitter.com" class="hover:text-primary transition-colors"><i class="fab fa-twitter"></i></a>
-          <a href="https://facebook.com" class="hover:text-primary transition-colors"><i class="fab fa-facebook"></i></a>
-          <a href="https://instagram.com" class="hover:text-primary transition-colors"><i class="fab fa-instagram"></i></a>
-          <a href="https://linkedin.com" class="hover:text-primary transition-colors"><i class="fab fa-linkedin"></i></a>
+          <a href="https://x.com/eazynetmanager" target="_blank" 
+          rel="noopener noreferrer" class="hover:text-primary transition-colors"><i class="fab fa-x"></i></a>
+          <a href="https://www.youtube.com/@EazyNetTabManager" target="_blank" 
+          rel="noopener noreferrer" class="hover:text-primary transition-colors"><i class="fab fa-youtube"></i></a>
+          <!-- <a href="https://instagram.com" class="hover:text-primary transition-colors"><i class="fab fa-instagram"></i></a> -->
+          <!-- <a href="https://linkedin.com" class="hover:text-primary transition-colors"><i class="fab fa-linkedin"></i></a> -->
         </div>
       </div>
     </div>
