--- a/index.html
+++ b/index.html
@@ -401,6 +401,10 @@
     </div>
   </div>
 </footer>
+<footer class="bg-slate-100 py-4 text-center text-sm text-gray-600">
+  🙋 Got ideas or feedback? <a href="https://tally.so/r/3XkNpg" target="_blank" class="text-blue-600 underline hover:text-blue-800">Tell us here</a>
+</footer>
+
 <!-- Policy Modal -->
 <div id="policy-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
   <div class="bg-white max-w-3xl mx-auto rounded-xl shadow-lg p-8 relative overflow-y-auto max-h-[80vh]">
