--- a/index.html
+++ b/index.html
@@ -383,11 +383,11 @@
           rel="noopener noreferrer" class="hover:text-primary transition-colors"><i class="fab fa-x"></i></a>
           <a href="https://www.youtube.com/@EazyNetTabManager" target="_blank" 
           rel="noopener noreferrer" class="hover:text-primary transition-colors"><i class="fab fa-youtube"></i></a>
-          
+                    <a href="https://www.linkedin.com/company/eazynetapp" target="_blank" 
+          rel="noopener noreferrer" class="hover:text-primary transition-colors"><i class="fab fa-linkedin"></i></a>
           <a href="https://www.reddit.com/user/These-Street-6034/" target="_blank" 
           rel="noopener noreferrer" class="hover:text-primary transition-colors"><i class="fab fa-reddit"></i></a>
           <!-- <a href="https://instagram.com" class="hover:text-primary transition-colors"><i class="fab fa-instagram"></i></a> -->
-          <!-- <a href="https://linkedin.com" class="hover:text-primary transition-colors"><i class="fab fa-linkedin"></i></a> -->
         </div>
       </div>
     </div>
