fixed toastify issue

--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
     </script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="main-common.js"></script>
 <script src="main-landing.js"></script>
   </body>
