fixed upgrade button

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       <h3 class="text-xl font-semibold mb-4">Premium (Coming Soon)</h3>
       <p class="text-gray-600 mb-4">Unlock advanced features, additional customization, and more.</p>
       <p class="font-semibold text-lg">$4.99 / month</p>
-      <a href="#pricing" class="mt-4 inline-block px-6 py-3 bg-blue-600 text-white px-5 py-2 rounded-xl font-semibold hover:shadow-md transition duration-300">Upgrade</a>
+      <a href="#" id="upgrade-pro-btn" class="mt-4 inline-block px-6 py-3 bg-blue-600 text-white px-5 py-2 rounded-xl font-semibold hover:shadow-md transition duration-300">Upgrade</a>
     </div>
   </div>
 </section>
