Added more features to pro

--- a/index.html
+++ b/index.html
@@ -293,6 +293,83 @@
     Add to Chrome
   </a>
 </section>
+<!-- FAQ Section-->
+<section id="faq" class="bg-gray-50 py-20 px-6">
+  <div class="max-w-4xl mx-auto">
+    <h2 class="text-4xl font-bold text-center text-gray-900 mb-12">Frequently Asked Questions</h2>
+    <div class="space-y-2">
+      
+      <!-- Example FAQ Item -->
+      <div class="faq-item border border-gray-200 rounded-xl shadow-sm hover:shadow-md transition">
+<button class="faq-question cursor-pointer w-full flex justify-between items-center px-5 py-4 text-left hover:bg-gray-50 transition group">
+            <span class="font-medium text-gray-900 text-base group-hover:text-blue-600">What is EazyNet?</span>
+            <svg class="icon w-5 h-5 text-gray-500 transform transition-transform duration-300" fill="currentColor" viewBox="0 0 20 20">
+              <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.293l3.71-4.06a.75.75 0 111.1 1.02l-4.25 4.65a.75.75 0 01-1.1 0l-4.25-4.65a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
+            </svg>
+          </button>
+          <div class="faq-answer hidden px-5 text-gray-600 text-sm">
+            <p class="py-3">EazyNet is a Chrome extension that helps you group, search, and organize tabs to reduce clutter and improve focus.</p>
+          </div>
+        </div>
+      <div class="faq-item border border-gray-200 rounded-xl shadow-sm hover:shadow-md transition">
+<button class="faq-question cursor-pointer w-full flex justify-between items-center px-5 py-4 text-left hover:bg-gray-50 transition group">
+          <span class="font-medium text-gray-900 text-base group-hover:text-blue-600">Is EazyNet free?</span>
+          <svg class="icon w-5 h-5 text-gray-500 transform transition-transform duration-300" fill="currentColor" viewBox="0 0 20 20">
+            <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.293l3.71-4.06a.75.75 0 111.1 1.02l-4.25 4.65a.75.75 0 01-1.1 0l-4.25-4.65a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
+          </svg>
+        </button>
+        <div class="faq-answer hidden px-5 text-gray-600 text-sm">
+          <p class="py-3">Yes! EazyNet has a free plan with powerful features. You can upgrade to Pro for advanced tools like smart subgrouping and unlimited mapping updates.</p>
+        </div>
+      </div>
+      <div class="faq-item border border-gray-200 rounded-xl shadow-sm hover:shadow-md transition">
+<button class="faq-question cursor-pointer w-full flex justify-between items-center px-5 py-4 text-left hover:bg-gray-50 transition group">
+          <span class="font-medium text-gray-900 text-base group-hover:text-blue-600">What is Smart Subgrouping?</span>
+          <svg class="icon w-5 h-5 text-gray-500 transform transition-transform duration-300" fill="currentColor" viewBox="0 0 20 20">
+            <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.293l3.71-4.06a.75.75 0 111.1 1.02l-4.25 4.65a.75.75 0 01-1.1 0l-4.25-4.65a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
+          </svg>
+        </button>
+        <div class="faq-answer hidden px-5 text-gray-600 text-sm">
+          <p class="py-3">It’s a Pro feature that groups tabs not just by domain, but by path — for example, different product pages on Amazon will be in separate subgroups.</p>
+        </div>
+      </div>
+      <div class="faq-item border border-gray-200 rounded-xl shadow-sm hover:shadow-md transition">
+<button class="faq-question cursor-pointer w-full flex justify-between items-center px-5 py-4 text-left hover:bg-gray-50 transition group">
+          <span class="font-medium text-gray-900 text-base group-hover:text-blue-600">Will it slow down my browser?</span>
+          <svg class="icon w-5 h-5 text-gray-500 transform transition-transform duration-300" fill="currentColor" viewBox="0 0 20 20">
+            <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.293l3.71-4.06a.75.75 0 111.1 1.02l-4.25 4.65a.75.75 0 01-1.1 0l-4.25-4.65a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
+          </svg>
+        </button>
+        <div class="faq-answer hidden px-5 text-gray-600 text-sm">
+          <p class="py-3">Not at all. EazyNet is built with performance in mind and runs efficiently in the background without affecting browsing speed.</p>
+        </div>
+      </div>
+      <div class="faq-item border border-gray-200 rounded-xl shadow-sm hover:shadow-md transition">
+<button class="faq-question cursor-pointer w-full flex justify-between items-center px-5 py-4 text-left hover:bg-gray-50 transition group">
+          <span class="font-medium text-gray-900 text-base group-hover:text-blue-600">Can I use it across multiple devices?</span>
+          <svg class="icon w-5 h-5 text-gray-500 transform transition-transform duration-300" fill="currentColor" viewBox="0 0 20 20">
+            <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.293l3.71-4.06a.75.75 0 111.1 1.02l-4.25 4.65a.75.75 0 01-1.1 0l-4.25-4.65a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
+          </svg>
+        </button>
+        <div class="faq-answer hidden px-5 text-gray-600 text-sm">
+          <p class="py-3">Yes! If you're a Pro user, your settings and groups sync automatically via Chrome sync — so your setup follows you everywhere.</p>
+        </div>
+      </div>
+      <div class="faq-item border border-gray-200 rounded-xl shadow-sm hover:shadow-md transition">
+<button class="faq-question cursor-pointer w-full flex justify-between items-center px-5 py-4 text-left hover:bg-gray-50 transition group">
+          <span class="font-medium text-gray-900 text-base group-hover:text-blue-600">How do I contact support?</span>
+          <svg class="icon w-5 h-5 text-gray-500 transform transition-transform duration-300" fill="currentColor" viewBox="0 0 20 20">
+            <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.293l3.71-4.06a.75.75 0 111.1 1.02l-4.25 4.65a.75.75 0 01-1.1 0l-4.25-4.65a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
+          </svg>
+        </button>
+        <div class="faq-answer hidden px-5 text-gray-600 text-sm">
+          <p class="py-3">You can email us at <a href="mailto:eazynettabmanager@gmail.com" class="text-blue-600 underline">eazynettabmanager@gmail.com</a> or use the contact form at the bottom of this page.</p>
+        </div>
+      </div> 
+      
+    </div>
+  </div>
+</section>
 
 <!-- Contact Section -->
 <section id="contact" class="bg-gray-50 py-20 px-6">
