--- a/onboarding.html
+++ b/onboarding.html
@@ -74,6 +74,11 @@
           <td class="text-center px-6 py-4 border-b border-gray-200 text-gray-400">—</td>
           <td class="text-center px-6 py-4 border-b border-gray-200 bg-blue-50 text-green-600 font-medium">✔️</td>
         </tr>
+         <tr class="hover:bg-gray-50">
+          <td class="text-left px-6 py-4 border-gray-200">Automatic Tabs Grouping</td>
+          <td class="text-center px-6 py-4 border-gray-200 text-gray-400">—</td>
+          <td class="text-center px-6 py-4 border-gray-200 bg-blue-50 text-green-600">✔️</td>
+        </tr>
         <tr class="hover:bg-gray-50">
           <td class="text-left px-6 py-4 border-b border-gray-200">Mapping Updates per Domain</td>
           <td class="text-center px-6 py-4 border-b border-gray-200">5</td>
@@ -82,6 +87,21 @@
         <tr class="hover:bg-gray-50">
           <td class="text-left px-6 py-4 border-b border-gray-200">Tab Search & Navigation</td>
           <td class="text-center px-6 py-4 border-b border-gray-200">✔️</td>
+          <td class="text-center px-6 py-4 border-b border-gray-200 bg-blue-50">✔️</td>
+        </tr>
+         <tr class="hover:bg-gray-50">
+          <td class="text-left px-6 py-4 border-b border-gray-200">Individual Tab Memory Management</td>
+          <td class="text-center px-6 py-4 border-b border-gray-200">10 Tabs</td>
+          <td class="text-center px-6 py-4 border-b border-gray-200 bg-blue-50 font-semibold">Unlimited</td>
+        </tr>
+         <tr class="hover:bg-gray-50">
+          <td class="text-left px-6 py-4 border-b border-gray-200">Tabs Group Memory Management</td>
+          <td class="text-center px-6 py-4 border-b border-gray-200 text-gray-400">—</td>
+          <td class="text-center px-6 py-4 border-b border-gray-200 bg-blue-50">✔️</td>
+        </tr>
+         <tr class="hover:bg-gray-50">
+          <td class="text-left px-6 py-4 border-b border-gray-200">Automatic Browser Memory Management</td>
+          <td class="text-center px-6 py-4 border-b border-gray-200 text-gray-400">—</td>
           <td class="text-center px-6 py-4 border-b border-gray-200 bg-blue-50">✔️</td>
         </tr>
         <tr class="hover:bg-gray-50">
@@ -99,7 +119,7 @@
   </div>
 <div style="height: 2rem;"></div>
   <div class="mt-10">
-   <a href="#" id="upgrade-pro-btn" class="inline-block px-8 py-3 bg-blue-600 text-white rounded-xl font-semibold hover:shadow-lg transition duration-300">
+   <a href="#" class="upgrade-pro-btn inline-block px-8 py-3 bg-blue-600 text-white rounded-xl font-semibold hover:shadow-lg transition duration-300">
   Upgrade to Pro
 </a>
 
@@ -127,7 +147,7 @@
   <div style="height: 2rem;"></div>
 
   <!-- Simple Button -->
-  <a href="#" id="upgrade-pro-btn" class="inline-block px-8 py-3 bg-blue-600 text-white rounded-xl font-semibold hover:shadow-lg transition duration-300">
+  <a href="#"  class="upgrade-pro-btn inline-block px-8 py-3 bg-blue-600 text-white rounded-xl font-semibold hover:shadow-lg transition duration-300">
   Upgrade to Pro
 </a>
 
