added feature details

--- a/index.html
+++ b/index.html
@@ -148,6 +148,18 @@
          <p class="text-gray-600 text-sm leading-relaxed max-w-md mx-auto italic opacity-90 transition-all duration-300 group-hover:opacity-100 group-hover:translate-y-0" data-aos="fade-up">
           Find any tab group and switch to any tab in real time</p>
         </div>
+               <!-- Slide 5: Deep Dive without Image -->
+<div class="swiper-slide bg-gray-50 p-6 rounded-2xl shadow-md transition-transform hover:scale-105 duration-300 group cursor-pointer"
+     onclick="window.location.href='/onboarding.html#feature-deep-dive';">
+
+  <h3 class="text-xl font-semibold mb-2 text-gray-800">📘 Click For Features Deep Dive</h3>
+
+  <p class="text-gray-600 text-sm leading-relaxed max-w-md mx-auto italic opacity-90 transition-all duration-300 group-hover:opacity-100 group-hover:translate-y-0" data-aos="fade-up">
+    Understand the features in depth and become the lord of productivity
+  </p>
+
+</div>
+
 
         <!-- Add more slides here as needed -->
 
