--- a/onboarding.html
+++ b/onboarding.html
@@ -125,6 +125,109 @@
 
   </div>
 </section>
+<!-- Feature Deep Dive Section -->
+<section id="feature-deep-dive" class="py-20 px-6 bg-white text-center bg-gradient-to-r from-blue-500 via-indigo-600 to-purple-700">
+  <h2 class="text-4xl font-bold mb-12 text-white" data-aos="fade-up">Feature Deep Dive</h2>
+
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-6xl mx-auto text-left">
+
+    <!-- Group Tabs by Domain -->
+    <div class="bg-gray-50 p-6 rounded-xl shadow-sm" data-aos="fade-up">
+      <h3 class="text-xl font-semibold mb-2 text-blue-700">🗂️ Group Tabs by Domain</h3>
+      <p class="text-gray-700"><strong>What it does:</strong> Instantly groups all open tabs based on domain (e.g., YouTube, GitHub, etc.).</p>
+      <p class="text-gray-700 mt-2"><strong>Why it matters:</strong> Reduces clutter and keeps similar tabs neatly together.</p>
+      <p class="text-gray-700 mt-2"><strong>How to use:</strong> Open the extension and click “Group Tabs”.</p>
+    </div>
+
+    <!-- Smart Subgrouping -->
+    <div class="bg-white p-6 rounded-xl shadow-sm border" data-aos="fade-up" data-aos-delay="100">
+      <h3 class="text-xl font-semibold mb-2 text-purple-700">🧠 Smart Subgrouping (Pro)</h3>
+      <p class="text-gray-700"><strong>What it does:</strong> Groups tabs not just by domain, but also by URL path (e.g., different Amazon product pages go into different subgroups).</p>
+      <p class="text-gray-700 mt-2"><strong>Why it matters:</strong> Gives power users precision-level organization within the same site.</p>
+      <p class="text-gray-700 mt-2"><strong>How to use:</strong> Upgrade to Pro → Enable “Path-based Subgrouping” in settings → Click “Group Tabs”.</p>
+      <p class="text-green-600 font-medium mt-2">Pro Benefit: Deep tab clarity. Better than Chrome’s native grouping.</p>
+    </div>
+
+    <!-- Tab Search -->
+    <div class="bg-gray-50 p-6 rounded-xl shadow-sm" data-aos="fade-up" data-aos-delay="200">
+      <h3 class="text-xl font-semibold mb-2 text-blue-700">🔍 Smart Tab Search</h3>
+      <p class="text-gray-700"><strong>What it does:</strong> Instantly searches across all your tabs.</p>
+      <p class="text-gray-700 mt-2"><strong>Why it matters:</strong> No more hunting or tab chaos — just type and go.</p>
+      <p class="text-gray-700 mt-2"><strong>How to use:</strong> Open EazyNet → Use the search bar to filter tabs by keyword.</p>
+    </div>
+
+    <!-- Auto Grouping -->
+    <div class="bg-white p-6 rounded-xl shadow-sm border" data-aos="fade-up" data-aos-delay="300">
+      <h3 class="text-xl font-semibold mb-2 text-purple-700">⚙️ Auto Tab Grouping (Pro)</h3>
+      <p class="text-gray-700"><strong>What it does:</strong> Automatically groups new tabs by domain or path without manual action.</p>
+      <p class="text-gray-700 mt-2"><strong>Why it matters:</strong> Fully automated — ideal for multitaskers and researchers.</p>
+      <p class="text-gray-700 mt-2"><strong>How to use:</strong> Enable “Auto Grouping” from the extension settings (Pro only).</p>
+      <p class="text-green-600 font-medium mt-2">Pro Benefit: Hands-free productivity boost.</p>
+    </div>
+
+    <!-- Mapping Updates -->
+    <div class="bg-gray-50 p-6 rounded-xl shadow-sm" data-aos="fade-up">
+      <h3 class="text-xl font-semibold mb-2 text-blue-700">✏️ Mapping Updates</h3>
+      <p class="text-gray-700"><strong>What it does:</strong> Allows renaming or re-mapping groups per domain (e.g., “gmail.com” = Work).</p>
+      <p class="text-gray-700 mt-2"><strong>Why it matters:</strong> Personalized tab logic for your workflow.</p>
+      <p class="text-gray-700 mt-2"><strong>How to use:</strong> Click the ✏️ icon next to a group → Save your mapping.</p>
+      <p class="text-green-600 font-medium mt-2">Free: 5 updates / domain • Pro: Unlimited</p>
+    </div>
+
+    <!-- Individual Tab Memory -->
+    <div class="bg-white p-6 rounded-xl shadow-sm border" data-aos="fade-up" data-aos-delay="100">
+      <h3 class="text-xl font-semibold mb-2 text-purple-700">🛌 Tab Memory Saver</h3>
+      <p class="text-gray-700"><strong>What it does:</strong> Snoozes unused tabs to free up memory.</p>
+      <p class="text-gray-700 mt-2"><strong>Why it matters:</strong> Keeps Chrome fast without closing tabs.</p>
+      <p class="text-gray-700 mt-2"><strong>How to use:</strong> In the tab search view → Click “Snooze” on a tab → “Restore” when needed.</p>
+      <p class="text-green-600 font-medium mt-2">Free: 10 snoozed tabs • Pro: Unlimited</p>
+    </div>
+
+    <!-- Group Memory Saver -->
+    <div class="bg-gray-50 p-6 rounded-xl shadow-sm" data-aos="fade-up" data-aos-delay="200">
+      <h3 class="text-xl font-semibold mb-2 text-purple-700">🧊 Group Memory Saver (Pro)</h3>
+      <p class="text-gray-700"><strong>What it does:</strong> Snoozes all tabs in a group with one click.</p>
+      <p class="text-gray-700 mt-2"><strong>Why it matters:</strong> Efficient way to pause an entire project/workstream.</p>
+      <p class="text-gray-700 mt-2"><strong>How to use:</strong> In the “All Groups” section → Click “Snooze Group”.</p>
+      <p class="text-green-600 font-medium mt-2">Pro Benefit: Maximize memory savings instantly.</p>
+    </div>
+
+    <!-- Auto Memory -->
+    <div class="bg-white p-6 rounded-xl shadow-sm border" data-aos="fade-up" data-aos-delay="300">
+      <h3 class="text-xl font-semibold mb-2 text-purple-700">🔁 Auto Memory Management (Pro)</h3>
+      <p class="text-gray-700"><strong>What it does:</strong> Automatically snoozes unused tabs every 30 mins.</p>
+      <p class="text-gray-700 mt-2"><strong>Why it matters:</strong> Saves RAM without thinking about it.</p>
+      <p class="text-gray-700 mt-2"><strong>How to use:</strong> Go to extension settings → Enable “Auto Memory Management”.</p>
+      <p class="text-green-600 font-medium mt-2">Pro Benefit: Set it and forget it — your browser stays light.</p>
+    </div>
+
+    <!-- Sync Across Devices -->
+    <div class="bg-gray-50 p-6 rounded-xl shadow-sm" data-aos="fade-up">
+      <h3 class="text-xl font-semibold mb-2 text-purple-700">🌐 Sync Across Devices (Pro)</h3>
+      <p class="text-gray-700"><strong>What it does:</strong> Keeps your groups and settings synced across all Chrome devices.</p>
+      <p class="text-gray-700 mt-2"><strong>Why it matters:</strong> Seamless transitions between work and home setups.</p>
+      <p class="text-gray-700 mt-2"><strong>How to use:</strong> Just sign into Chrome on all devices with sync enabled.</p>
+      <p class="text-green-600 font-medium mt-2">Pro Benefit: Truly portable tab management.</p>
+    </div>
+
+    <!-- Support -->
+    <div class="bg-white p-6 rounded-xl shadow-sm border" data-aos="fade-up" data-aos-delay="100">
+      <h3 class="text-xl font-semibold mb-2 text-purple-700">📩 Priority Support (Pro)</h3>
+      <p class="text-gray-700"><strong>What it does:</strong> Pro users get faster, personalized help.</p>
+      <p class="text-gray-700 mt-2"><strong>Why it matters:</strong> Get answers and fixes quickly.</p>
+      <p class="text-gray-700 mt-2"><strong>How to use:</strong> Email <a href="mailto:eazynettabmanager@gmail.com" class="text-blue-600 underline">eazynettabmanager@gmail.com</a> with “Pro Support” in the subject.</p>
+    </div>
+
+  </div>
+<div style="height: 2rem;"></div>
+
+  <!-- CTA -->
+  <div class="mt-12">
+    <a href="#" class="upgrade-pro-btn inline-block px-8 py-3 bg-white text-grey rounded-xl font-semibold hover:shadow-lg transition duration-300">
+      Upgrade to Pro
+    </a>
+  </div>
+</section>
 
 
 <!-- Onboarding Pro Section -->
