--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
       AOS.init({
         duration: 1000, // Animation duration
         easing: 'ease-out', // Animation easing
-        once: true, // Only animate once
+        once: true,
       });
     </script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
